# enve

./: .gitignore  .gitmodules  CMakeInstall.txt  CMakeLists-cflags.txt  CMakeLists.txt  CMakeUtilities.txt  ENVE.mltbx  ENVE.prj  LICENSE  LICENSE.txt  README.md  README.rst  Rakefile  Rakefile_common.rb  Rakefile_conf.rb  Rakefile_configure.rb
docs/: .buildinfo  Manual_Introduction.html  Manual_Usage.html  examples.html  genindex.html  index.html  intro.html  objects.inv  readme.html  search.html  searchindex.js
docs/_static/: alabaster.css
docs/api-cpp/: class_a00047.html  class_a00049.html  class_a00050.html  class_a00051.html  class_a00053.html  class_a00054.html  class_a00055.html  class_a00059.html  class_a00061.html  class_a00062.html  class_a00063.html  class_a00065.html  class_a00066.html  class_a00067.html  class_a00069.html  class_a00070.html  class_a00073.html  class_a00074.html  class_a00077.html  class_a00081.html  class_a00085.html  class_a00089.html  class_a00093.html  class_a00097.html  class_view_hierarchy.html  define_a00002_1adb141fde3426bd65cb33b8c908f5c66c.html  define_a00005_1a7aae512d7783170d5e417747fc4893b0.html  define_a00005_1ae58de9cc4b7136d0047938da6c4d84f7.html  define_a00008_1a00751197d46b68281547bd97ad8f0ab5.html  define_a00008_1ad517377dad23671ba7ebf182d3dc81b7.html  define_a00008_1ae58de9cc4b7136d0047938da6c4d84f7.html  define_a00011_1a00751197d46b68281547bd97ad8f0ab5.html  define_a00011_1ad517377dad23671ba7ebf182d3dc81b7.html  define_a00011_1ae09deb9cd2b9f9be1d0cd37065010b78.html  define_a00014_1a1b082fb2682100918fcb9989677f4910.html  define_a00014_1ae09deb9cd2b9f9be1d0cd37065010b78.html  define_a00017_1a1b082fb2682100918fcb9989677f4910.html  define_a00017_1ac1737af928424643ca13b119b609a4b3.html  define_a00020_1a175c00fd075c34fe6fbae0df416ee273.html  define_a00020_1a7844a51a19cf68c3cd9eb4c03ba66ae9.html  (+118 more)
docs/api-matlab/: class_a00017.html  class_a00020.html  class_a00021.html  class_a00024.html  class_a00025.html  class_a00028.html  class_a00029.html  class_a00032.html  class_view_hierarchy.html  file_CompileENVElib_CMake.m.html  file_enve_flat.m.html  file_enve_mesh.m.html  file_enve_shell.m.html  file_enve_triangleground.m.html  file_view_hierarchy.html  program_listing_file_CompileENVElib_CMake.m.html  program_listing_file_enve_flat.m.html  program_listing_file_enve_mesh.m.html  program_listing_file_enve_shell.m.html  program_listing_file_enve_triangleground.m.html  root.html  unabridged_api.html  unabridged_orphan.html
docs_build/: Doxyfile  Makefile  project_common.py
docs_build/_static/: custom.css
docs_build/sphinx/: Manual_Introduction.rst  Manual_Usage.rst  conf.py  examples.rst  filter.rb  index.rst  intro.rst
example-TestRig/: .gitignore  Main.m  TireTestRig.slx  TireTestRig.slx.autosave  TireTestRig.slx.original
example-TestRig/files_stl/: rig_low.stl  rig_up.stl  wheel.stl
example-TestRig/files_tir/: 205_60_R15__left.tir  205_60_R15__left_debug.tir  MagicFormula61_Parameters.tir  MagicFormula62_Parameters.tir
example-TestRig/inputs/: maneuver_generator.m  sine_thetaX.mat  sine_thetaXYZ.mat  sine_thetaY.mat  sine_thetaZ.mat  standstill.mat  tets_gap.mat  tets_obs.mat  translation_X.mat  translation_X_vel.mat  translation_Z.mat  translation_Z_g0.mat  translation_Z_gp4.mat  translation_Z_gp5.mat  x_pos.mat
files_rdf/: sample.rdf
include/: enve.hh  enve_hyperellipse.hh  enve_mesh.hh  enve_output.hh  enve_polynom.hh  enve_rib.hh  enve_shape.hh  enve_shell.hh  enve_triangleground.hh
sfun/: CompileENVEsfun.m  ENVEsfun.c  ENVEsfun_makecfg.m  populate_sfun.rb
sfun/Simulator/: CompileENVEsfun_Simulator.m
sfun/Simulator1/: CompileENVEsfun_Simulator1.m  ENVEsfun_Simulator1.c  ENVEsfun_Simulator1_makecfg.m
sfun/src/: acme.hh  (+47 more)
src/: enve.hh  enve_flat.cc  enve_mesh.cc  enve_rib.cc  enve_shape.cc  enve_shell.cc  enve_triangleground.cc  flat.cc  mesh.cc  rib.cc  shell.cc  triangleground.cc
submodules/: rakefile
tests/: TicToc.hh  enve-test1.cc  enve-test2.cc  enve-test3.cc  enve-test4.cc  enve-test5.cc  enve-test6.cc  enve-timing.cc  enve-timing1.cc  enve-timing2.cc  enve_rtf_00.cc  enve_test_00.cc  enve_test_01.cc  enve_test_02.cc  enve_test_03.cc  enve_test_04.cc  enve_test_05.cc  enve_test_06.cc  enve_test_sfun_00.cc  enve_timing_00.cc  enve_timing_01.cc  test_00.cc  test_01.cc  test_02.cc  test_03.cc  test_04.cc  test_05.cc  test_06.cc  timing_00.cc  timing_01.cc
toolbox/: CMakeLists.txt  CompileENVElib.m  populate_toolbox.rb  setup.m
toolbox/doc/: GettingStarted.mlx
toolbox/lib/: CompileENVElib_CMake.m  enve_flat.m  enve_mesh.m  enve_shell.m  enve_triangleground.m
toolbox/src/: AABBtree.cc  Utils_AABB_tree.cc  Utils_AABB_tree.hh  Utils_Algo748.cc  Utils_Algo748.hh  Utils_GG2D.cc  Utils_GG2D.hh  Utils_HJPatternSearch.cc  Utils_HJPatternSearch.hh  Utils_NelderMead.cc  Utils_NelderMead.hh  Utils_Poly.cc  Utils_eigen.hh  aabb.cc  acme.hh  acme_AABBtree.cc  acme_AABBtree.hh  acme_ball.cc  acme_ball.hh  acme_collection.cc  acme_collection.hh  acme_collinear.cc  acme_collinear.hh  acme_coplanar.cc  acme_disk.cc  acme_disk.hh  acme_entity.cc  acme_entity.hh  acme_intersection.cc  acme_intersection.hh  acme_line.cc  acme_line.hh  acme_math.cc  acme_math.hh  acme_none.cc  acme_orthogonal.hh  acme_parallel.cc  acme_parallel.hh  acme_plane.cc  acme_plane.hh  (+44 more)
toolbox/src/Utils/: Utils.hxx
toolbox/src/acme/: AABBtree.hxx  aabb.hxx  ball.hxx  collection.hxx  collinear.hxx  coplanar.hxx  disk.hxx  entity.hxx  intersection.hxx  line.hxx  math.hxx  none.hxx  orthogonal.hxx  parallel.hxx  plane.hxx  point.hxx  ray.hxx  segment.hxx  triangle.hxx  utilities.hxx
toolbox/src/enve/: flat.hxx  mesh.hxx  rib.hxx  shape.hxx  shell.hxx  triangleground.hxx
toolbox/src_mex/: mex_flat.cc  mex_mesh.cc  mex_shell.cc  mex_triangleground.cc  mex_utils.hh
toolbox/tests/: Copy_of_test_setup_flat.m  Copy_of_test_setup_mesh.m  enve_test_flat.m  enve_test_mesh.m  enve_test_setup_flat.m  enve_test_setup_mesh.m  enve_test_triangleground.m  test_flat.m  test_mesh.m  test_setup_flat.m  test_setup_mesh.m  test_shell.m  test_triangleground.m
(+156 files in other folders)
